--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/index.css" type="text/css">
   </head>
   <body>
-    <canvas id="canvas" width="1000" height="1000"></canvas>
+    <canvas id="point_field" width="300" height="300"></canvas>
+    <canvas id="cross_field" width="900" height="900"></canvas>
 
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js" type="text/javascript"></script> -->
     <script src="./js/index.js"></script>
